--- a/package.json
+++ b/package.json
@@ -4,23 +4,41 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && mocha 'test/**/*.spec.js' --recursive -t 5000",
+    "fix": "standard --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@terraformer/arcgis": "^2.1.0",
+    "@terraformer/wkt": "^2.0.7",
+    "@turf/projection": "^6.5.0",
+    "from-exponential": "^1.1.1",
     "gzip-js": "^0.3.2",
     "koop": "^4.1.1",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "node-sql-parser": "^3.9.3",
     "protobufjs": "^6.11.2",
     "sqlite-parser": "^1.0.1",
-    "standard": "^16.0.4",
     "uuid": "^8.3.2"
   },
   "standard": {
+    "globals": [
+      "describe",
+      "it",
+      "before",
+      "after",
+      "beforeEach",
+      "afterEach"
+    ],
     "ignore": [
       "src/utilities/EsriKnowledgeGraph.js"
     ]
+  },
+  "devDependencies": {
+    "mocha": "^9.2.2",
+    "should": "^13.2.3",
+    "standard": "^16.0.4"
   }
 }
